# f1r3node

./: .devcontainer.json  .drone.yml  .gitignore  .jvmopts  AGENTS.md  CHANGELOG.md  CHANGELOG_string_escape_fix.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  TODO.md  all-5.logs  all.logs  build.sbt  cliff.toml  deploy_rgb_demo.rho  flake.nix  logicT_execution_runtime-IMPLEMENTATION_PLAN.md  parse_logs.py  rename_rev_to_asi.sh  rust-toolchain.toml  test_string_escape.rho
casper/: Cargo.toml  README.md
casper/src/rust/: block_status.rs  casper.rs  casper_conf.rs  equivocation_detector.rs  errors.rs  estimator.rs  last_finalized_height_constraint_checker.rs  metrics_constants.rs  mod.rs  multi_parent_casper_impl.rs  report_store.rs  reporting_casper.rs  safety_oracle.rs  synchrony_constraint_checker.rs  system_deploy.rs  validate.rs
casper/tests/: block_creator_memory_profile_spec.rs  compute_parents_post_state_regression_spec.rs  mod.rs
casper/tests/add_block/: mod.rs  multi_parent_casper_add_block_spec.rs  proposer_spec.rs
casper/tests/api/: block_query_response_api_test.rs  blocks_response_api_test.rs  bonded_status_api_test.rs  deploy_finalization_status_test.rs  exploratory_deploy_api_test.rs  graph_generator_tests.rs  last_finalized_api_test.rs  listening_name_api_test.rs  mod.rs  preview_private_name_test.rs
casper/tests/batch1/: mod.rs  multi_parent_casper_bonding_spec.rs  multi_parent_casper_communication_spec.rs  multi_parent_casper_deploy_spec.rs  multi_parent_casper_finalization_spec.rs  multi_parent_casper_merge_spec.rs  multi_parent_casper_reporting_spec.rs  multi_parent_casper_rholang_spec.rs  multi_parent_casper_smoke_spec.rs
casper/tests/batch2/: clique_oracle_test.rs  dedup_orphan_recovery_spec.rs  estimator_test.rs  finalizer_test.rs  limited_parent_depth_spec.rs  lmdb_key_value_store_spec.rs  mod.rs  multi_validator_recovery_spec.rs  recovery_cycle_spec.rs  rholang_build_test.rs  single_parent_casper_spec.rs  slash_recovery_spec.rs  validate_test.rs
casper/tests/blocks/: block_creator_spec.rs  block_processor_test.rs
casper/tests/engine/: approve_block_protocol_test.rs  block_approver_protocol_test.rs  engine_cell_test.rs  genesis_ceremony_master_spec.rs  genesis_validator_spec.rs  initializing_spec.rs  lfs_block_requester_effects_spec.rs  lfs_state_requester_effects_spec.rs  mod.rs  running_handle_has_block_spec.rs  running_spec.rs  setup.rs
casper/tests/finality/: finalizer_test.rs
casper/tests/genesis/: genesis_test.rs  mod.rs  system_contract_initialization_spec.rs
casper/tests/helper/: block_dag_storage_fixture.rs  block_generator.rs  block_util.rs  bonding_util.rs  mod.rs  no_ops_casper_effect.rs  rho_spec.rs  secp256k1_sign_contract.rs  test_node.rs
casper/tests/merging/: bond_merge_regression_spec.rs  conflict_detection_perf_spec.rs  dag_merger_branch_derived_spec.rs  merge_bitmask_or_tagged_channel_spec.rs  merge_csv_pipeline_spec.rs  merge_number_channel_spec.rs  merging_cases.rs  mod.rs  state_channel_pipeline_spec.rs
casper/tests/multi_node/: bridge_contract_concurrent_merge.rs
casper/tests/resources/: bridge-v2.rho  bridge.rho
casper/tests/rholang/: mod.rs  multi_parent_casper_rholang_spec.rs
casper/tests/safety/: clique_oracle_test.rs
casper/tests/sync/: block_retriever_request_all_spec.rs  block_retriever_spec.rs
casper/tests/util/: casper_util_test.rs  clique_test.rs  dag_operations_test.rs  genesis_builder.rs  in_memory_key_value_store_spec.rs  mod.rs  proto_util_test.rs  rspace_history_horizon_test.rs  test_mocks.rs
comm/: Cargo.toml  build.rs
comm/src/rust/: errors.rs  metrics_constants.rs  mod.rs  peer_node.rs  test_instances.rs  upnp.rs  who_am_i.rs
comm/tests/: who_am_i_spec.rs
comm/tests/rp/: clear_connections_spec.rs
comm/tests/transport/: transport_layer_runtime.rs  transport_layer_spec.rs
models/: Cargo.toml  README.md  build.rs
models/src/: lib.rs
models/src/rust/: block_implicits.rs  mod.rs  normalizer_env.rs  par_map.rs  par_pathmap_type_mapper.rs  par_to_sexpr.rs  path_map.rs  path_map_encoder.rs  pathmap_crate_type_mapper.rs  pathmap_integration.rs  pathmap_zipper.rs  serde_helpers.rs  sexpr_to_par.rs  utils.rs
models/tests/: json_encoder_test.rs  par_sort_matcher_test.rs  path_map_tests.rs  pathmap_integration_tests.rs  scored_term_sort_test.rs
node/: Cargo.toml  Dockerfile  README.md  build.rs  docker-commands.sh
node/src/: main.rs
node/src/rust/: mod.rs  node_environment.rs  repl.rs
node/tests/: rho_trie_traverser_test.rs  transaction_api_test.rs
rholang/: Cargo.toml  README.md
rholang-sonic/: Cargo.toml  Option_B_Wrapper_Pattern_Design.md  RGB_CLI_BUG_REPORT.md  RHOLANGCODEX_DEMO_GUIDE.md
rholang-sonic/src/: contracts.rs  error.rs  extraction.rs  lib.rs  mapping.rs  serialization.rs  storage.rs  validation.rs
rholang/benches/: spaces_benchmark.rs
rholang/examples/: README.md  numeric-types.rho  pathmap-demo.rho  pathmap-immutability-test.rho  tut-pathmap-all-methods.rho  tut-pathmap-zippers.rho  zipper-advanced-navigation-demo.rho  zipper-navigation-demo.rho
rholang/examples/reified_rspaces/: array_indexed_space.rho  cell_exactly_once.rho  hashset_dedup_spaces.rho  multi_space_isolation.rho  nondeterminism_demo.rho  pathmap_hierarchical_spaces.rho  pathmap_prefix_aggregation.rho  priority_queue.rho  queue_fifo.rho  set_idempotent.rho  space_qualifiers.rho  (+7 more)
rholang/src/: lib.rs  main.rs  rholang_cli.rs
rholang/tests/: abort_spec.rs  crypto_channels_spec.rs  demo_verification.rs  deploy_data_spec.rs  getsubtrie_spec.rs  interpreter_spec.rs  mod.rs  numeric_types_spec.rs  ollama_integration_test.rs  openai_service_spec.rs  pathmap_e2e_type_decomposition_spec.rs  pathmap_element_extraction_spec.rs  pathmap_method_dispatch_spec.rs  pathmap_pattern_matching_spec.rs  pathmap_proptest_spec.rs  reduce_spec.rs  replay_memory_profile_spec.rs  rholang_numeric_eval_spec.rs  setsubtrie_spec.rs  similarity_spec.rs  spaces_tests.rs  substitute_test.rs  zipper_advanced_navigation_spec.rs  zipper_path_management_spec.rs  zipper_query_methods_spec.rs
(+1010 files in other folders)
