[workspace]
resolver = "2"
members = [
	"casper",
	"rspace++",
	"rholang",
	"shared",
	"node",
	"node-cli",
	"models",
	"crypto",
	"block-storage",
	"rspace++/libs/rspace_rhotypes",
	"comm",
	"graphz"
]

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.dev]
debug = true
