[workspace]
resolver = "2"
members = [
	"casper",
	"rspace++",
	"rholang",
	"shared",
	"node",
	"node-cli",
	"models",
	"crypto",
	"block-storage",
	"rspace++/libs/rspace_rhotypes",
	"comm",
	"graphz",
]

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
	"env-filter",
	"fmt",
	"json",
] }
tracing-log = "0.2"
tokio = { version = "1", features = ["full"] }
eyre = "0.6"
thiserror = "2.0"
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
tonic-prost-build = "0.14"
tower = "0.5"
rand = "0.9"
bincode = "1.3.3"
serde = "1.0"
serde_json = "1.0"
itertools = "0.14"
futures = "0.3"
hex = "0.4"
dashmap = "6.1"
regex = "1.12"
async-trait = "0.1"
metrics = "0.24"

[profile.dev]
debug = true
