[package]
name = "models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto = { path = "../crypto" }
rspace_plus_plus = { path = "../rspace++" }
shared = { path = "../shared" }
pathmap = { git = "https://github.com/Adam-Vandervorst/PathMap", branch = "cleanup_to_release" }
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.2", features = ["v4"] }
itertools = "0.12.1"
proptest-derive = "0.5.1"
proptest = "1.4.0"
rand = "0.9.0"
tonic = {version ="0.14"}
prost = "0.14"
tonic-prost = "0.14"

[[test]]
name = "models_tests"
path = "tests/mod.rs"
harness = false

[lib]
name = "models"
path = "src/lib.rs"
doctest = false

[build-dependencies]
tonic-prost-build = "0.14"
