[package]
name = "node"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
models = { path = "../models" }
crypto = { path = "../crypto" }
rholang = { path = "../rholang" }
shared = { path = "../shared" }
casper = { path = "../casper" }
comm = { path = "../comm" }
rspace_plus_plus = { path = "../rspace++" }
graphz = { path = "../graphz" }
block-storage = { path = "../block-storage" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.12.1"
async-trait = "0.1.74"
hex = "0.4.3"
clap = { version = "4.0", features = ["derive"] }
hocon = "0.9.0"
eyre = "0.6.12"
humantime = "2.3.0"
byte-unit = "5.1.6"
futures = "0.3.31"
tokio = { version = "1.0", features = ["fs", "net", "rt", "rt-multi-thread"] }
tonic = {version ="0.14"}
prost = "0.14"
tonic-prost = "0.14"
colored = "3.0"
rustyline = "13.0"
rpassword = "7.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-log = "0.2"
dashmap = "6.1.0"
regex = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
rspace_plus_plus = { path = "../rspace++" }
# No dependencies yet - empty module

[build-dependencies]
tonic-prost-build = "0.14"
