[package]
name = "node"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
models = { path = "../models" }
crypto = { path = "../crypto" }
rholang = { path = "../rholang" }
shared = { path = "../shared" }
casper = { path = "../casper" }
comm = { path = "../comm" }
rspace_plus_plus = { path = "../rspace++" }
graphz = { path = "../graphz" }
block-storage = { path = "../block-storage" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.12.1"
async-trait = "0.1.74"
hex = "0.4.3"
clap = { version = "4.0", features = ["derive"] }
hocon = "0.9.0"
eyre = "0.6.12"
humantime = "2.3.0"
byte-unit = "5.1.6"
futures = "0.3.31"
tokio = { version = "1.0", features = ["fs", "net", "rt", "rt-multi-thread"] }
tonic = {version ="0.14"}
prost = "0.14"
tonic-prost = "0.14"
colored = "3.0"
rustyline = "13.0"
rpassword = "7.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-opentelemetry = "0.21"
tracing-log = "0.2"
dashmap = "6.1.0"
regex = "1.0"
rand = "0.9.2"
# Web framework dependencies
axum = {version = "0.8", features = ["macros", "ws"]}
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
thiserror = "2.0"
uuid = { version = "1.0", features = ["v4"] }
# WebSocket dependencies
tokio-tungstenite = "0.28"
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
# Metrics dependencies (analog of Scala's Kamon + NewPrometheusReporter)
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
metrics-exporter-influx = "0.2.2"
opentelemetry = { version = "0.20", features = ["rt-tokio"] }
opentelemetry-zipkin = { version = "0.19", features = ["reqwest-client"] }
opentelemetry_sdk = { version = "0.20", features = ["rt-tokio"] }
sysinfo = "0.28"
tonic-reflection = "0.14"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
rspace_plus_plus = { path = "../rspace++" }
tower = "0.5.2"
# No dependencies yet - empty module

[build-dependencies]
tonic-prost-build = "0.14"
