[package]
name = "rholang"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rholang-cli"
path = "src/rholang_cli.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto = { path = "../crypto" }
models = { path = "../models" }
shared = { path = "../shared" }
rspace_plus_plus = { path = "../rspace++" }
mettatron = { path = "../../MeTTa-Compiler" }
itertools = "0.10.2"
serde = "1.0"
tokio = { version = "1", features = ["full"] }
tree-sitter = "0.25.8"
tree-sitter-rust = "0.24"
cc = { version = "1.1.12", features = [] }
hex = "0.4.3"
prost = "0.14"
zbase32 = "0.1.2"
lazy_static = "1.5.0"
futures = "0.3.30"
bincode = "1.3.3"
regex = "1.10.6"
rand = "0.8.5"
uuid = { version = "1", features = ["v4"] }
pretty_assertions = "1.3.0"
thiserror = "2.0.9"
anyhow = "1.0.95"
k256 = { version = "0.13.4", features = ["ecdsa"] }
openai-api-rs = "6.0.3"
dotenv = "0.15.0"
indexmap = "2.8.0"
rayon = "1.10.0"
openssl = { version = "0.10", features = ["vendored"] }
tempfile = "3.19.1"
log = "0.4.27"
clap = { version = "4.5", features = ["derive"] }
rholang-parser = { git = "https://github.com/F1R3FLY-io/rholang-rs", branch = "dylon/named-comment-nodes" }
validated = "1.0.0"
smallvec = { version = "1.15.1", features = ["union", "const_generics", "const_new", "may_dangle"] }
typed-arena = "2.0.2"

[build-dependencies]
cc = "1.0"
