[package]
name = "rholang"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["vectordb"]
# VectorDB feature for similarity-based tuple space operations
# VectorDB types are defined locally in rholang; backends (like rho-vectordb)
# implement the handler traits and register themselves.
vectordb = []

[[bin]]
name = "rholang-cli"
path = "src/rholang_cli.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto = { path = "../crypto" }
models = { path = "../models" }
shared = { path = "../shared" }
rspace_plus_plus = { path = "../rspace++" }
async-trait = "0.1"
itertools = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tree-sitter = "0.25.8"
tree-sitter-rust = "0.24"
cc = { version = "1.1.12", features = [] }
hex = { workspace = true }
prost = { workspace = true }
zbase32 = "0.1.2"
lazy_static = "1.5.0"
futures = { workspace = true }
bincode = { workspace = true }
regex = { workspace = true }
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
pretty_assertions = "1.3.0"
thiserror = { workspace = true }
k256 = { version = "0.13.4", features = ["ecdsa"] }
openai-api-rs = "6.0.3"
dotenv = "0.15.0"
indexmap = "2.8.0"
rayon = "1.10.0"
openssl = { version = "0.10", features = ["vendored"] }
tempfile = "3.19.1"
clap = { version = "4.5", features = ["derive"] }
# Using local rholang-rs-master for UseBlock and ChannelQualifier support (Reifying RSpaces)
rholang-parser = { path = "../../rholang-rs-master/rholang-parser" }
validated = "1.0.0"
smallvec = { version = "1.15.1", features = [
	"union",
	"const_generics",
	"const_new",
	"may_dangle",
] }
typed-arena = "2.0.2"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dashmap = "6.1.0"
im = "15.1"

# Vector and tensor operations for VectorDB (Reified RSpaces)
# Uses matrixmultiply for optimized SIMD matrix operations (no external BLAS needed)
ndarray = { version = "0.16", features = [
    "rayon",                    # Parallel iterators via Rayon
    "matrixmultiply-threading", # Threaded matrix multiplication with SIMD
    "serde",                    # Serialization support
] }
ndarray-rand = "0.15"

[dev-dependencies]
proptest = "1.4.0"
proptest-derive = "0.5.1"
rstest = "0.19.0"
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1"

[build-dependencies]
cc = "1.0"

[[bench]]
name = "spaces_benchmark"
harness = false

# Pedagogical Examples for Reified RSpaces are in examples/reified_rspaces/*.rho
# These are pure Rholang files that demonstrate end-to-end syntax and semantics.
# Run with: rholang --execute examples/reified_rspaces/<example>.rho
